<resources>
    <string name="app_name">Prodify</string>
    <string name="title_home">Home</string>
    <string name="title_blogs">Blogs</string>
    <string name="title_result">Result</string>
    <string name="hint_email">Prodify@example.com</string>
    <string name="hint_name">Username</string>
    <string name="hint_password">********</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_password">Password cannot be less than 8 character</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="ask_account">Don\'t have account?</string>
    <string name="ask_account_login">Already have account?</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="desc_auth">You can log in or make an account if you are new to Prodify</string>z
    <string name="email_auth">Enter your email</string>
    <string name="title_auth">Authentication</string>
    <string name="languange">English</string>
    <string name="welcome_txt">Selamat Datang !</string>
    <string name="welcome_desc">Dengan Prodify judul dan deskripsi produk dapat dibuat hanya dengan menggunakan jepretan foto produk anda.</string>
    <string name="profile">Profile</string>
    <string name="tv_category_item">Kaos Pria (example)</string>
    <string name="tv_title_item">Bangkit T-Shirt with red and white combination</string>
    <string name="logo">Logo</string>
    <string name="avatar">avatar</string>
    <string name="discover">Temukan hasil generasi judul dan deskripsi produkmu disini!</string>
    <string name="bookmark">Bookmarks</string>
    <string name="camera">camera\n</string>
    <string name="add_widget">addWidget</string>
    <string name="btn_shite">white</string>
    <string name="gray">gray</string>
    <string name="logres">Continue\n</string>
    <string name="capture_product">Capture the product</string>
    <string name="preview_image">preview image</string>
    <string name="blogs_image">blogs image</string>
    <string name="product_image">product image</string>
    <string name="category">elektronik</string>
    <string name="prodify">Prodify</string>
    <string name="email_prodify">Prodiy@example.com</string>
    <string name="history">Riwayat</string>
    <string name="blogs_title">Blog dari Prodify</string>
    <string name="blogs_desc">Explore tips and trick menarik dari Prodify !</string>
    <string name="permission_denied">Permission Denied\n</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="description">Description</string>
    <string name="btn_finalize_product">Finalize Product</string>
    <string name="title">Title</string>
    <string name="Description">Description</string>
    <string name="blogs_text">Klik Disini !</string>
    <string name="date">25/5/2023\n</string>
    <string name="greetings"> Halo, {z} 👋 </string>
    <string name="username">Username</string>
    <string name="showpassword">showPassword</string>
    <string name="pass_confirmation">Konfirmasi Password</string>
    <string name="welcome_login">Selamat datang kembali 👋</string>
    <string name="welcome_login_sub">Kami senang melihat anda kembali! Silahkan masuk menggunakan email dan password akun anda 😊</string>
    <string name="welcome_register">Daftar Akun ✍️</string>
    <string name="welcome_register_sub">Selamat datang di Prodify! Silahkan daftarkan akun anda menggunakan username, email, and password di halaman ini.</string>
</resources>