<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.auth.AuthenticationFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.c23ps105.prodify.ui.customview.ProdifyTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/monsemibold"
            android:text="@string/email_auth"
            android:textSize="24sp" />

        <com.c23ps105.prodify.ui.customview.ProdifyTextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/pnregular"
            android:includeFontPadding="false"
            android:text="@string/desc_auth"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/monsemibold"
            android:text="@string/username"
            android:textColor="@color/black600" />

        <com.c23ps105.prodify.ui.customview.ProdifyEditTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pnregular"
            android:hint="@string/hint_name"
            android:includeFontPadding="false"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/monsemibold"
            android:text="Email"
            android:textColor="@color/black600" />

        <com.c23ps105.prodify.ui.customview.ProdifyEditTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pnregular"
            android:hint="@string/hint_email"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/monsemibold"
            android:text="@string/password"
            android:textColor="@color/black600" />

        <include
            android:id="@+id/passwords"
            layout="@layout/prodify_password_edit_text" />

        <TextView
            android:id="@+id/tv_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/monsemibold"
            android:text="@string/pass_confirmation"
            android:textColor="@color/black600" />

        <include
            android:id="@+id/password_confirmation"
            layout="@layout/prodify_password_edit_text" />
    </LinearLayout>

    <com.c23ps105.prodify.ui.customview.ProdifyButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:paddingBottom="0dp"
        android:text="@string/logres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>