<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.home.HomeFragment">

            <include
                android:id="@+id/navbar"
                layout="@layout/navbar_layout" />

            <com.c23ps105.prodify.ui.customview.ProdifyTextView
                android:id="@+id/tv_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="24dp"
                android:text="@string/history"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navbar" />

            <com.c23ps105.prodify.ui.customview.ProdifyTextView
                android:id="@+id/tv_desc_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Lihat riwayat pembuatan produk kamu disini."
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_history"
                app:layout_constraintStart_toStartOf="@+id/tv_history"
                app:layout_constraintTop_toBottomOf="@+id/tv_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_history"
                tools:listitem="@layout/item_grid" />

            <com.c23ps105.prodify.ui.customview.ProdifyTextView
                android:id="@+id/tv_blogs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/blogs_title"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_history"
                app:layout_constraintStart_toStartOf="@+id/tv_history"
                app:layout_constraintTop_toBottomOf="@+id/rv_home_history" />

            <com.c23ps105.prodify.ui.customview.ProdifyTextView
                android:id="@+id/tv_desc_blogs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/blogs_desc"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_blogs"
                app:layout_constraintStart_toStartOf="@+id/tv_blogs"
                app:layout_constraintTop_toBottomOf="@+id/tv_blogs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_blogs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/tv_history"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/tv_history"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_blogs"
                tools:listitem="@layout/item_linear" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>